Implementação da API, adição de funcionalidade de listar guildas e atualização da documentação
